--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CHÀO ĐÓN TÂN SINH VIÊN NGÀNH CNTT VÀ KHDL - FIT UEF</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <meta property="og:image" content="https://fituef.github.io/ecommerce/images/bg.jpg">
+    <meta property="og:image" content="images/bg.jpg">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <meta name="keywords" content="chào đón tân sinh viên K20, sinh viên cntt, khdl K2020" />
     <meta name="description" content="Chương trình chào đón tân sinh viên Ngành Công nghệ thông tin và Khoa học dữ liệu Khóa 2020 - 2024 - Khoa công nghệ thông tin, Trường Đại học Kinh tế - Tài Chính Tp.HCM - UEF'" <meta charset="utf-8">
